2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeCellDataFunc.xml
	* en/Gtk/TreeDataList.xml
	* en/Gtk/TreeDestroyCountFunc.xml
	* en/Gtk/TreeIter.xml
	* en/Gtk/TreeIterCompareFunc.xml
	* en/Gtk/TreeModel.xml
	* en/Gtk/TreeModelForeachFunc.xml
	* en/Gtk/TreeSelectionFunc.xml
	* en/Gtk/TreeSortable.xml
	* en/Gtk/TreeView.xml: Various updates to tree object docs.
	
2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/*Args.xml: Documented many handler arguments classes.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/HTML.xml
	* en/Gtk/HTMLCommandType.xml
	* en/Gtk/HTMLFontStyle.xml
	* en/Gtk/HTMLParagraphAlignment.xml
	* en/Gtk/HTMLSaveReceiverFn.xml: documented HTML widget classes.
	
2004-08-08  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* en/Gtk/AccelGroup.xml
	* en/Gtk/AccelGroupEntry.xml
	* en/Gtk/AccelKey.xml
	* en/Gtk/RcProperty.xml
	* en/Gtk/TreeDragSource.xml: Fixed errors in tags, make assemble now works.
	
2004-08-05  Shane Landrum <epicene@pobox.com>

	* en/Gtk/Rc*: Filled in all "to be added" for RC-file
	subsystem.
	* en/Gtk/Accel*: Added docs about accelerator keys.

2004-08-04  Shane Landrum <epicene@pobox.com>

	* en/Gtk/*: docs for many tree-related methods,
	assorted others.

2004-08-01  Shane Landrum <epicene@pobox.com>

	* en/Pango/*: Filled in all "To be added"; cleaned
	up existing docs and made them more consistent.
	
2004-07-27  John Luke  <john.luke@gmail.com>

	some GLib and Atk docs

2004-07-21  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TextView.xml:
	* en/Gtk/TextIter.xml: documented the rest

2004-07-16  John Luke  <jluke@cfl.rr.com>

	* en/Pango/*: doc'ed some more pango stuff

2004-07-11  John Luke  <jluke@cfl.rr.com>

	* en/Vte*: some Vte docs
	* en/Pango/Context.xml: doc'ed

2004-07-07  Jasper Van Putten <jaspervp@gmx.net>

	* en/Gtk/*.xml : docs for Notebook and RadioButton.

2004-07-06  Peter Johanson <latexer@gentoo.org>

	* en/Gnome/*.xml : docs for ColorPicker.
