@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>This is used by <see cref="T:Gtk.TextAttributes" /> for color and position details about text.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -27,8 +27,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>A default/empty TextAppearance.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -41,10 +41,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.TextAppearance'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal constructor; not for developer use.</summary>
+        <param name="raw">an <see cref="T:IntPtr" />, pointer to the underlying C object</param>
+        <returns>a new <see cref="T:Gtk.TextAppearance" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="fg_stipple">
@@ -56,10 +56,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gdk.Bitmap'</param>
-        <returns>To be added: an object of type 'Gdk.Bitmap'</returns>
-        <remarks>To be added</remarks>
+        <summary>A stipple (dotted) pattern for the foreground color.</summary>
+        <param name="value">a <see cref="T:Gdk.Bitmap" /></param>
+        <returns>a <see cref="T:Gdk.Bitmap" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="bg_stipple">
@@ -71,10 +71,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gdk.Bitmap'</param>
-        <returns>To be added: an object of type 'Gdk.Bitmap'</returns>
-        <remarks>To be added</remarks>
+        <summary>A stipple (dotted) pattern for the background color.</summary>
+        <param name="value">a <see cref="T:Gdk.Bitmap" /></param>
+        <returns>a <see cref="T:Gdk.Bitmap" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="BgColor">
@@ -86,8 +86,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The background color of this text.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="FgColor">
@@ -99,8 +99,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The foreground color of this text.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Rise">
@@ -112,8 +112,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Offset of text in pixels above the baseline (if positive) or below the baseline (if negative).</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Underline">
@@ -125,8 +125,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Style of underlining for this text.</summary>
+        <remarks>See <see cref="T:Pango.Underline" /> for possible values.</remarks>
       </Docs>
     </Member>
   </Members>
