@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An object to represent the possible attributes of text in a <see cref="T:Gtk.TextView" /></summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -27,8 +27,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>No attributes at all.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -39,9 +39,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.TextAttributes'</returns>
-        <remarks>To be added</remarks>
+        <summary>Public constructor.</summary>
+        <returns>A new <see cref="T:Gtk.TextAttributes" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -54,10 +54,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.TextAttributes'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor for internal use only.</summary>
+        <param name="raw">An <see cref="IntPtr" />, a pointer to the C object.</param>
+        <returns>a new <see cref="T:Gtk.TextAttributes" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Ref">
@@ -68,8 +68,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Increments the reference count.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="CopyValues">
@@ -82,9 +82,9 @@
         <Parameter Name="dest" Type="Gtk.TextAttributes" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="dest">To be added: an object of type 'Gtk.TextAttributes'</param>
-        <remarks>To be added</remarks>
+        <summary>Copy the values in this object to <paramref name="dest" /> and free the values in this object..</summary>
+        <param name="dest">A new <see cref="T:Gtk.TextAttributes" /></param>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Copy">
@@ -95,9 +95,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.TextAttributes'</returns>
-        <remarks>To be added</remarks>
+        <summary>Makes a new copy of this object.</summary>
+        <returns>A new <see cref="T:Gtk.TextAttributes" /></returns>
+        <remarks>FIXME: elaborate the difference between this and Copy, and see if the differences in the underlying C library carry over to the C# library</remarks>
       </Docs>
     </Member>
     <Member MemberName="Unref">
@@ -108,8 +108,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Decrements the reference count for this object, freeing the underlying C data structure if the refcount reaches 0.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="language">
@@ -121,10 +121,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Pango.Language'</param>
-        <returns>To be added: an object of type 'Pango.Language'</returns>
-        <remarks>To be added</remarks>
+        <summary>The language of this text.</summary>
+        <param name="value">a <see cref="T:Pango.Language" /></param>
+        <returns>a <see cref="Pango.Language" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="tabs">
@@ -136,10 +136,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Pango.TabArray'</param>
-        <returns>To be added: an object of type 'Pango.TabArray'</returns>
-        <remarks>To be added</remarks>
+        <summary>The tab stops for this text.</summary>
+        <param name="value">a <see cref="T:Pango.TabArray" /></param>
+        <returns>a <see cref="T:Pango.TabArray" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="font">
@@ -151,10 +151,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Pango.FontDescription'</param>
-        <returns>To be added: an object of type 'Pango.FontDescription'</returns>
-        <remarks>To be added</remarks>
+        <summary>The font for this text.</summary>
+        <param name="value">a <see cref="T:Pango.FontDescription" /></param>
+        <returns>a <see cref="T:Pango.FontDescription" /></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -179,8 +179,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The reference count for this object.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Appearance">
@@ -192,8 +192,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The appearance of this text: colors, underlining, etc.</summary>
+        <remarks>See <see cref="T:Gtk.TextAppearance" /> for more details.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Justification">
@@ -205,8 +205,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The justification of this text.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Direction">
@@ -218,8 +218,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Whether this text runs right-to-left or left-to-right.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="FontScale">
@@ -231,8 +231,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The scale of this text.</summary>
+        <remarks>For more information about font scaling, see <see cref="T:Pango.Scale" /></remarks>
       </Docs>
     </Member>
     <Member MemberName="LeftMargin">
@@ -244,8 +244,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The size of the left margin.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Indent">
@@ -257,8 +257,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The size of the indent.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="RightMargin">
@@ -270,8 +270,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The size of the right margin.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="PixelsAboveLines">
@@ -283,8 +283,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of blank pixels above a line of text.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="PixelsBelowLines">
@@ -296,8 +296,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of blank pixels below a line of text.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="PixelsInsideWrap">
@@ -309,8 +309,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The number of pixels between wrapped lines.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="WrapMode">
@@ -322,8 +322,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The line-wrapping style for this text.</summary>
+        <remarks />
       </Docs>
     </Member>
   </Members>
