@@ -1,5 +1,10 @@
 2004-08-13  Shane Landrum <epicene@pobox.com>
 
+	* en/Gtk/TextAppearance.xml
+	* en/Gtk/TextAttributes.xml: Classes to control text presentation.
+
+2004-08-13  Shane Landrum <epicene@pobox.com>
+
 	* en/Gtk/TreeCellDataFunc.xml
 	* en/Gtk/TreeDataList.xml
 	* en/Gtk/TreeDestroyCountFunc.xml
